--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="topbar">
         <button class="btn" id="back-to-inbox-settings-btn">&larr; Inbox</button>
         <h2>Settings</h2>
-        <span></span>
+        <button class="btn btn-secondary" id="logout-btn">Logout</button>
       </div>
       
       <div class="settings-container">
